# vibroacoustic-analysis

./: .gitignore  .pre-commit-config.yaml  README.md  audio-anomaly-detection.py  audio_exploration.ipynb  classificator.ipynb  cv2_movement_detector.py  emd_check.py  emd_example.py  extract_video.py  lightgbm.ipynb  model.h5  optical_flow.py  peaks.ipynb  peaks.py  process.py  pyproject.toml  requirements.txt  style.mplstyle
classificators/: classificator_16kHz.ipynb  classificator_41kHZ_bandpass.ipynb  classificator_41kHz.ipynb  classificator_41kHz_no_liver.ipynb  classificator_41kHz_no_skin.ipynb  classificator_41kHz_no_skin_no_liver.ipynb  requirements.txt
